# Ares

./: .gitignore  LICENSE  README.md  demo.sh  e2e_user_test.sh  main.py  pyproject.toml
docs/: ARCHITECTURE.md  DEMO_TRANSCRIPT.md  LINKEDIN_POST.md  ROADMAP.md
examples/claude-code-slash-commands/: ares-review.md  ares-state.md  ares-validate.md
examples/support-dashboard/data/: support_tickets.csv
examples/support-dashboard/docs/: support-process.md
examples/support-dashboard/reports/: weekly-summary.md
examples/support-dashboard/research/: customer-interviews.md
project_launcher/: __init__.py  agents.py  agents_llm.py  catalog.py  cli.py  config.py  data_inspector.py  drift.py  e2e.py  editor.py  graph.py  health.py  ingest.py  jobs.py  knowledge.py  langgraph_workflow.py  local_models.py  mcp_server.py  multiagent.py  quality.py  rag.py  runbook.py  semantic_rag.py  state.py  superagent.py  templates.py  validate.py  workflows.py  workspace.py
tests/: test_cli.py
