[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "offline-project-launch-assistant"
version = "0.1.0"
description = "A fully offline PM/founder superagent CLI for launching project workspaces."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alankrit Ghosh" }]
keywords = ["offline", "product-management", "rag", "multiagent", "ollama", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.optional-dependencies]
data = ["numpy", "pandas"]
langgraph = ["langgraph"]

[project.scripts]
offline-project-launcher = "project_launcher.cli:main"
opla = "project_launcher.cli:main"

[tool.setuptools.packages.find]
include = ["project_launcher*"]

